--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION "3.16")
 project(test_ftp)
 
-include_directories(libncftp-3.2.6/libncftp)
-include_directories(libncftp-3.2.6/sio)
-include_directories(libncftp-3.2.6/Strn)
+add_subdirectory(ftpclient-cpp)
+include_directories(ftpclient-cpp/FTP)
 
 add_executable(test-ftp test-ftp.cpp)
+target_link_libraries(test-ftp ftpclient)
